--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "ema-john",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "enzyme": "^2.9.1",
-    "font-awesome": "^4.7.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-rating": "^0.8.0",
-    "react-router-dom": "^4.1.1",
-    "react-scripts": "1.0.10",
-    "react-test-renderer": "^15.6.1"
-  },
+  "name": "bidding",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server"
+  },
+  "author": "Saurabh Targe",
+  "license": "ISC",
+  "dependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "html-webpack-plugin": "^2.28.0",
+    "path": "^0.12.7",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.0"
   }
 }
